CodeView: temp fix button style error when width is too small

--- a/media/CodeView.css
+++ b/media/CodeView.css
@@ -1,3 +1,3 @@
 .ankiview-answer-button {
-    width: 24%;
+    width: 23%;
 }
